--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -496,7 +496,7 @@
         font-size: 12px;
       }
       input,
-      > select {
+      select {
         width: 100%;
         font-size: 11px;
         height: 25px;
