--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -455,18 +455,26 @@
         height: 30px;
       }
     }
+    .main-title {
+      color: #ffffff;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
     .brand-title {
       margin-bottom: 0;
-      font-size: 13px;
-      padding-right: 30px;
+      font-size: 12px;
+      padding-right: 40px;
+      text-align: right;
     }
     .btn-close {
       position: absolute;
-      top: 0;
-      right: 5px;
+
+      right: 15px;
       color: #ffffff;
       font-size: 10px;
-      line-height: 15px;
+      line-height: 30px;
       &:hover {
         color: #000000;
         text-decoration: none;
@@ -495,6 +503,10 @@
       label {
         font-size: 12px;
       }
+      span {
+        line-height: 20px;
+        font-size: 11px;
+      }
       input,
       select {
         width: 100%;
@@ -513,23 +525,29 @@
         span{
           display: inline-block;
           font-size: 10px;
+          line-height: normal;
         }
       }
       i {
         position: absolute;
-        top: 21px;
-        right: -20px;
+        top: 20px;
+        right: -28px;
       }
       p{
         font-size: 10px;
       }
       p.terms {
+        line-height: 21px;
         font-size: 12px;
+        margin-top: -2px;
         i {
           position: inherit;
         }
         span {
           display: inline;
+        }
+        input {
+          margin-top: -2px;
         }
       }
     }
@@ -557,7 +575,7 @@
       margin-left: -30px;
       margin-right: -30px;
       .btns {
-        padding: 0 30px;
+        padding: 0 25px;
       }
       .btns .btn {
         color: rgb(255, 255, 255);
@@ -582,18 +600,18 @@
         line-height: 30px;
         display: inline-block;
         border-radius: 50%;
-        margin: 10px 15px;
-        border: 1px solid #bbb;
+        margin: 0px 5px 15px;
         font-size: 12px;
         font-weight: bold;
         color: #ddd;
       }
-      .form-submit {
-        margin-top: 10px;
-      }
       .form-submit input {
-        line-height: 25px;
+        line-height: 20px;
         border-radius: 10px;
+      }
+      .brand-botao {
+        font-weight: bold;
+        border-width: 2px;
       }
     }
   }
