--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -629,4 +629,121 @@
       }
     }
   }
+  /* Footer */
+  &.footer {
+    .social {
+      margin-bottom: 10px;
+    }
+    .footer-referencias {
+      padding-top: 10px;
+      border-top: 1px solid #bbb;
+    }
+    .footer-aviso {
+      font-size: 10px;
+    }
+    .footer-menu {
+      border-top: 1px solid #bbb;
+      border-bottom: 1px solid #bbb;
+      padding: 15px 0 30px 0;
+      margin: 20px auto;
+      position: relative;
+
+      @btn-margin: 50px;
+      ul {
+        margin-left: -@btn-margin;
+        margin-right: -@btn-margin;
+      }
+      li {
+        width: 25%;
+        padding: 15px @btn-margin;
+      }
+
+      .btn-grey {
+        line-height:  30px;
+        padding: 0;
+        width: 100%;
+
+        color: #777;
+        line-height: 30px;
+        border: 1px solid #777;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 14px;
+        font-weight: bold;
+
+        &:hover {
+          border: 1px solid #112149;
+          color: #fff;
+          background-color: #112149;
+          text-align: center;
+        }
+      }
+
+
+    }
+
+    @media (max-width: @screen-lg-max) {
+      .main {
+        width: 970px;
+      }
+      .footer-menu {
+        .btn-grey {
+          font-size: 12px;
+        }
+
+        @btn-margin: 30px;
+        ul {
+          margin-left: -@btn-margin;
+          margin-right: -@btn-margin;
+        }
+        li {
+          padding-left: @btn-margin;
+          padding-right: @btn-margin;
+        }
+      }
+    }
+    @media (max-width: @screen-md-max) {
+      .main {
+        width: 850px;
+      }
+      .footer-menu {
+        .btn-grey {
+          font-size: 11px;
+        }
+
+        @btn-margin: 15px;
+        ul {
+          margin-left: -@btn-margin;
+          margin-right: -@btn-margin;
+        }
+        li {
+          padding-left: @btn-margin;
+          padding-right: @btn-margin;
+        }
+      }
+    }
+  }
+}
+
+.bet {
+
+  .footer-menu li {
+    list-style: none;
+    float: left;
+  }
+
+  .footer-menu-logo {
+    width: 200px;
+    height: 67px;
+    text-align: center;
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    margin-left: -100px;
+    z-index: 10;
+  }
+  .footer-menu-logo img {
+    width: 160px;
+    height: 67px;
+  }
 }
