Fix Registo Part 1.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -626,6 +626,12 @@
         font-weight: bold;
         color: #ddd;
         border: none;
+
+      }
+
+      .brand-botao {
+        color: #ffffff;
+        background-color: @brand-color;
       }
     }
   }
@@ -723,9 +729,6 @@
       }
     }
   }
-}
-
-.bet {
 
   .footer-menu li {
     list-style: none;
