Fix auto exclusão para guardar o motive.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -750,3 +750,13 @@
     height: 67px;
   }
 }
+.bet {
+  .form-registo {
+    textarea {
+      border-radius: 10px;
+      width: 100%;
+      box-sizing: border-box;
+      min-height: 80px;
+    }
+  }
+}
