--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -754,7 +754,6 @@
   .form-registo {
     .title-form-registo {
       font-size: 16px;
-      padding-bottom: 28px;
     }
     .brand-botao-rev2 {
       line-height:  30px;
@@ -780,7 +779,12 @@
         background-color: @brand-color;
       }
     }
-
+    .box-form-user,
+    .box-form-user-info {
+      .title-form-registo {
+        padding-bottom: 28px;
+      }
+    }
     textarea {
       border-radius: 10px;
       width: 100%;
