--- a/resources/assets/less/form.perfil.less
+++ b/resources/assets/less/form.perfil.less
@@ -32,6 +32,10 @@
         }
       }
     }
+
+    .settings-menu-margin {
+      margin: 20px auto 0;
+    }
   }
   @grid-form-margin: 15px;
   @import (multiple) "grid.less";
