Ajusted Menus, Header and Footer of Page.

--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -1,9 +1,8 @@
-
+@import (reference) "variables.less";
 .btn-brand {
   background-color: transparent;
   color: @btn-brand-color;
-  border-color: @btn-brand-color;
-  border: 2px solid @btn-brand-border-color;
+  border: 1px solid @btn-brand-border-color;
   border-radius: 10px;
   &:hover {
     color: @btn-brand-color-hover;
@@ -16,12 +15,14 @@
   }
 }
 .btn-slim {
-  font-size: 14px;
+  font-size: 12px;
   width: 140px;
-  padding: 3px 3px;
+  padding: 5px 0px;
+  line-height: 18px;
+  height: 30px;
 }
 .btn-clean {
-  color: @btn-brand-color;
+  color: @right-menu-color;
   border: none;
   &:hover {
     color: @btn-brand-color-hover;
@@ -44,4 +45,28 @@
 .btn-header {
   padding: 0 5px;
   font-size: 10px;
+  color: @right-menu-color;
+  &:hover {
+    color: @btn-menu-hover-color;
+  }
+}
+
+/* OLD */
+
+.botao-registar {
+  border: 1px solid #fff;
+  border-radius: 10px;
+  line-height: 30px;
+  height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 9px auto;
+  color: #fff;
+  font-weight: bold;
+  font-size: 80%;
+}
+.botao-registar:hover {
+  background-color: #054c6d;
+  border: 1px solid #ddd;
+  color: #ddd;
 }
