--- a/resources/assets/less/form.registo.less
+++ b/resources/assets/less/form.registo.less
@@ -1,4 +1,4 @@
-
+@import (reference) "variables.less";
 /* Registo */
 &.regist {
   @media (max-width: @screen-lg-max) {
@@ -41,11 +41,11 @@
         perspective-origin: 63.875px 16.5px;
         transform-origin: 63.875px 16.5px;
         background: rgb(1, 159, 233) none repeat scroll 0% 0% / auto padding-box border-box;
-        border: 2px solid rgb(187, 187, 187);
+        border: 0px solid rgb(187, 187, 187);
         border-radius: 10px 10px 10px 10px;
         font: normal normal normal normal 12.24px / 25px 'Helvetica Neue', Helvetica, Arial, sans-serif;
         outline: rgb(255, 255, 255) none 0px;
-        padding: 3px;
+        padding: 5px;
         transition: all 0.4s ease 0s;
 
         line-height: 20px;
@@ -58,7 +58,12 @@
       .brand-botao {
         font-size: 13px;
         font-weight: bold;
-        border-width: 2px;
+        border-width: 0;
+        line-height: 30px;
+        height: 30px;
+        &:hover {
+          color: @btn-brand-color-hover;
+        }
       }
       .form-marcadores p {
         width: 30px;
