--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -9,6 +9,7 @@
 @btn-brand-border-color: #ddd;
 
 @right-menu-color: #cccccc;
+@navbar-dashed-color: @right-menu-color;
 
 @btn-menu-color: #555;
 @btn-menu-border-color: #555;
