Ajusted Menus, Header of Page.

--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -33,9 +33,10 @@
   color: @btn-menu-color;
   border: 1px solid @btn-menu-border-color;
   width: 100%;
-  border-radius: 10px;
+  border-radius: 10px; /* 4px */
   line-height: 18px;
   font-size: 11px;
+  letter-spacing: 0.5px;
   &:hover {
     color: @btn-menu-hover-color;
     border: 1px solid @btn-menu-hover-border-color;
@@ -69,4 +70,46 @@
   background-color: #054c6d;
   border: 1px solid #ddd;
   color: #ddd;
+}
+
+
+/****** OTHER BRAND SETTINGS *******/
+.brand-title {
+  font-weight: bold;
+  font-size: 130%;
+  margin-bottom: 5px;
+}
+.brand-box-title {
+  line-height: 50px;
+  padding: 10px 20px 5px 20px;
+}
+.brand-descricao {
+  font-size: 110%;
+  color: #999;
+}
+.brand-button {
+  background: #5b5b5b;
+  border: 1px solid #222;
+}
+.brand-link {
+  opacity: 1;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.brand-link:hover {
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.brand-trans {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
