Added Tooltip to Regist. Added Search Field.

--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -25,8 +25,8 @@
   color: @right-menu-color;
   border: none;
   &:hover {
-    color: @btn-brand-color-hover;
-    border-color: #adadad;
+    color: @btn-menu-hover-color;
+    border-color: #ffffff;
   }
 }
 .btn-menu {
