--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -23,6 +23,9 @@
   @import (less) "footer.less";
 
 }
+
+@import (less) "plugin.tooltip.less";
+
 .bet {
   .form-registo {
     .title-form-registo {
