--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -46,6 +46,13 @@ nav {
     }
     .nav-ontop {
       padding-right: 20px;
+      input {
+        display: none;
+        text-transform: capitalize;
+        font-size: 10px;
+        float: right;
+        margin: 0;
+      }
     }
     .board-menu-option {
       margin: 5px 0;
@@ -59,7 +66,8 @@ nav {
       padding: 0 10px;
     }
     .col-xs-5,
-    .col-xs-4 {
+    .col-xs-4,
+    .col-xs-2 {
       padding: 0 5px;
     }
     @media (max-width: @screen-lg-max) {
