--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -16,6 +16,9 @@
 @btn-menu-hover-color: #ffffff;
 @btn-menu-hover-border-color: @navbar-back-color;
 
+@input-background-color: #faffbd;
+@input-disabled-color: #777777;
+
 @screen-sm-min: 768px;
 @screen-sm-max: 767px;
 @screen-md-min: 992px;
