--- a/resources/assets/less/form.common.less
+++ b/resources/assets/less/form.common.less
@@ -82,3 +82,56 @@
     }
   }
 }
+.form-footer-rodape {
+  .btns .btn {
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    text-align: center;
+    white-space: pre;
+    align-items: flex-start;
+    perspective-origin: 63.875px 16.5px;
+    transform-origin: 63.875px 16.5px;
+    background: rgb(1, 159, 233) none repeat scroll 0% 0% / auto padding-box border-box;
+    border: 0px solid rgb(187, 187, 187);
+    border-radius: 10px 10px 10px 10px;
+    font: normal normal normal normal 12.24px / 25px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    outline: rgb(255, 255, 255) none 0px;
+    padding: 5px;
+    transition: all 0.4s ease 0s;
+
+    line-height: 20px;
+    font-size: 13px;
+  }
+  .form-submit input {
+    line-height: 20px;
+    border-radius: 10px;
+  }
+  .brand-botao {
+    font-size: 13px;
+    font-weight: bold;
+    border-width: 0;
+    line-height: 30px;
+    height: 30px;
+    &:hover {
+      color: @btn-brand-color-hover;
+    }
+  }
+  .form-marcadores p {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 0px 5px 15px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #ddd;
+    border: none;
+
+  }
+
+  .brand-botao {
+    color: #ffffff;
+    background-color: @brand-color;
+  }
+}
