--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -51,7 +51,13 @@ nav {
         text-transform: capitalize;
         font-size: 10px;
         float: right;
-        margin: 0;
+        margin: 0 -35px 0 0;
+        background-color: @input-background-color;
+      }
+      .btn {
+        position: relative;
+        padding: 8px 12px;
+        z-index: 1;
       }
     }
     .board-menu-option {
@@ -219,6 +225,7 @@ nav {
   display: none;
   input {
     margin: 0;
+    background-color: @input-background-color;
   }
   .btn-login-sub {
     background-color: #efd83c;
@@ -228,6 +235,7 @@ nav {
     padding: 5px 0px;
     line-height: 18px;
     height: 30px;
+    font-weight: bold;
   }
   > .col-xs-4 {
     padding: 0 10px;
@@ -250,8 +258,10 @@ nav {
   .btn-link {
     font-size: 10px;
     padding: 14px 0 0 15px;
+    color: @right-menu-color;
     &:hover {
       color: @navbar-color;
+      text-decoration: none;
     }
   }
 }
@@ -305,6 +315,12 @@ nav {
     margin-right: 0px;
     margin-bottom: -1px;
     position: relative;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0px 0px 10px 10px;
+    border-color: transparent transparent #fafafa transparent;
+    margin-top: 5px;
   }
   .btn {
     margin-bottom: 10px;
@@ -372,6 +388,7 @@ nav {
       font-size: 10px;
     }
     .menu_triangle {
+      border-width: 0px 10px 10px 0px;
       margin-left: @menu-header-width - 115px;
     }
   }
@@ -379,6 +396,7 @@ nav {
     right: 20px;
     z-index: 1010;
     .menu_triangle {
+      border-width: 0px 10px 10px 10px;
       margin-left: @menu-header-width - 85px;
     }
   }
@@ -386,6 +404,7 @@ nav {
     right: 20px;
     z-index: 1010;
     .menu_triangle {
+      border-width: 0px 10px 10px 10px;
       margin-left: @menu-header-width - 56px;
     }
   }
