Added: Contacts importer js.

--- a/public/assets/portal/css/style.css
+++ b/public/assets/portal/css/style.css
@@ -962,3 +962,7 @@ input.cmn-toggle-round:checked + label:after {
     color: #ffffff;
     font-size: 40px;
 }
+
+.convida_listas li {
+    cursor: pointer;
+}
