Changed Layout of Perfil.

--- a/resources/assets/less/form.perfil.less
+++ b/resources/assets/less/form.perfil.less
@@ -63,6 +63,14 @@
         right: -22px;
       }
     }
+    .form-rodape {
+      input {
+        font-size: 12px;
+      }
+    }
+    .brand-descricao {
+      font-size: 12px;
+    }
     .alert {
       padding: 5px;
     }
