--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -76,6 +76,12 @@ nav {
     .col-xs-2 {
       padding: 0 5px;
     }
+    .nav-onscroll,
+    .nav-ontop {
+      padding: 0 15px;
+    }.nav-ontop {
+       padding: 0 20px 0 15px;
+     }
     @media (max-width: @screen-lg-max) {
       li a {
         padding: 5px 8px;
