Changed Layout of Perfil. Limits, Invites and SelfExclusion.

--- a/resources/assets/less/form.datepicker.less
+++ b/resources/assets/less/form.datepicker.less
@@ -1,10 +1,14 @@
 .settings-date-interval {
   font-size: 10px;
   input {
-    max-width: 60px;
+    max-width: 45%;
   }
+  #date-begin-text,
   #date-end-text {
-    text-align: right;
+    font-size: 12px;
+    padding: 0;
+    line-height: 30px;
+    text-align: center;
   }
 }
 .settings-col-20 {
@@ -13,7 +17,7 @@
   overflow: hidden;
 }
 #menu-container {
-  padding-right: 10px;
+
 }
 .settings-menu-mid-margin{
   margin: 9px auto 0;
@@ -24,7 +28,7 @@
   max-height: 320px;
 
   .settings-row {
-    max-width: 178px;
+    max-width: 188px;
   }
 
   .settings-row-label {
@@ -62,7 +66,6 @@
     font-size: 81%;
     border-collapse: collapse;
     margin: 15px auto 0;
-    max-width: 178px;
     width: 100%;
     th {
       padding: .7em 0;
