Changed Layout of Perfil.

--- a/resources/assets/less/footer.less
+++ b/resources/assets/less/footer.less
@@ -7,7 +7,7 @@
   .footer-menu {
     border-top: 1px solid #bbb;
     border-bottom: 1px solid #bbb;
-    padding: 10px 0 20px 0;
+    padding: 0 0 20px 0;
     margin: 10px auto;
     position: relative;
 
