--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -30,6 +30,44 @@ nav {
     border-radius: 0;
     padding: 10px 0;
     z-index: 1000;
+    z-index: 1000;
+    max-height: 50px;
+
+    &.with-reset {
+      max-height: 100px;
+    }
+    #reset_pass {
+      margin-top: 10px;
+      background-color: #cccccc;
+      h5 {
+        font-weight: bold;
+      }
+
+      .form-registo{
+        padding: 0;
+        height: auto;
+
+        .registo-form {
+          height: 65px;
+          margin-left: 0;
+          input {
+            width: 90%;
+            border-radius: 10px;
+            padding: 5px 10px;
+          }
+          i {
+            position: relative;
+            top: 3px;
+          }
+        }
+        .formSubmit {
+          margin-top: 18px;
+          padding: 5px 10px;
+          border-radius: 10px;
+        }
+      }
+    }
+
     .btn-brand {
       text-transform: capitalize;
     }
