Added list and download of attachments.

--- a/resources/assets/less/form.perfil.less
+++ b/resources/assets/less/form.perfil.less
@@ -144,6 +144,16 @@
       color: #ffffff;
       font-size: 40px;
     }
+
+    /* Comprovativos */
+    .comprovativos {
+      display:block;
+      border-top:1px dashed #777;
+      padding: 10px 0;
+      max-height: 160px;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
   }
 
   @import (less) "form.datepicker.less";
