Changed Layout of History.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -20,6 +20,8 @@
   @import (less) "form.registo.less";
   @import (less) "form.perfil.less";
 
+  @import (less) "tables.less";
+
   @import (less) "footer.less";
 
 }
