Changed Layout of History.

--- a/resources/assets/less/tables.less
+++ b/resources/assets/less/tables.less
@@ -19,7 +19,9 @@
   .col-11 { width: 11/12*100%; }
   .col-12 { width: 12/12*100%; }
 
-
+  .cap {
+    text-transform: capitalize;
+  }
   th {
     font-weight: bold;
     font-size: 16px;
