Change Friends Table.

--- a/resources/assets/less/tables.less
+++ b/resources/assets/less/tables.less
@@ -19,6 +19,9 @@
   .col-11 { width: 11/12*100%; }
   .col-12 { width: 12/12*100%; }
 
+  .progress {
+    margin-bottom: 0;
+  }
   .cap {
     text-transform: capitalize;
   }
