--- a/resources/assets/less/form.perfil.less
+++ b/resources/assets/less/form.perfil.less
@@ -21,6 +21,9 @@
       .div-link {
         padding: 5px 0px;
 
+        &:nth-of-type(2) {
+          padding-top: 0;
+        }
         .btn-menu {
           font-weight: bold;
           &.sel {
