--- a/public/assets/portal/css/sports/markets.css
+++ b/public/assets/portal/css/sports/markets.css
@@ -10,6 +10,10 @@
     float: left;
 }
 
+.markets-container table {
+    text-align: center;
+}
+
 .markets-container * {
     text-shadow: 1px 1px 1px #343434;
 }
@@ -19,7 +23,6 @@
     border: 1px solid #fff;
     background: none;
     margin-top: 10px;
-    height: 20px;
     line-height: 20px;
     padding: 1px 15px 1px 5px;
 }
@@ -120,6 +123,7 @@
 }
 
 .markets-text-gameName {
+    display: inline;
     /*margin-left: 5px;*/
 }
 
