--- a/public/assets/portal/css/sports/sports.css
+++ b/public/assets/portal/css/sports/sports.css
@@ -1,7 +1,23 @@
+.body, .html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+}
+
+body, html, ul, li, div, p, input, textarea {
+	padding: 0;
+	margin: 0;
+}
+
+body {
+	background: #fff;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	color: #000;
+	font-size: 90%;
+}
+
 .black-back{
-
 	background:#262626;
-
 }
 
 
@@ -109,6 +125,7 @@
 	text-align:center;
 
 	margin-top:10px;
+	cursor: pointer;
 
 }
 
@@ -116,8 +133,7 @@
 
 .height1{
 
-	height:20px;
-
+	/*height:20px;*/
 	line-height:20px;
 
 }
@@ -441,7 +457,7 @@
 
 .level1 span{
 
-	width: 15px;
+	width: 25px;
 
 }
 
