Fix a bad style on login Form.

--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -65,6 +65,12 @@
   font-weight: bold;
   font-size: 80%;
 }
+input.botao-registar {
+  color: #333;
+  &:hover {
+    color: #111;
+  }
+}
 .botao-registar:hover {
   background-color: #054c6d;
   border: 1px solid #ddd;
