--- a/public/assets/portal/templates/markets/header.html
+++ b/public/assets/portal/templates/markets/header.html
@@ -1,9 +1,7 @@
 <div class="markets-box-navigation">
     <i class="fa fa-chevron-left"></i><i class="fa fa-chevron-left"></i> &nbsp;&nbsp;
 
-    <span class="fright">
-        Date
-    </span>
+    <span class="fright">{{now}}</span>
 </div>
 <div class="markets-header">
     <span class="markets-text-title">Sport</span>
