--- a/public/assets/portal/css/sports/markets.css
+++ b/public/assets/portal/css/sports/markets.css
@@ -1,30 +1,174 @@
 .markets-container {
-    border: 1px solid #262626;
+    float: left;
     min-height: 600px;
-    border-radius: 10px;
-    padding: 10px 7px 10px 5px;
     color: #fff;
-    font-size: 85%;
-    background: #545253;
-    width: 58%;
+    width: 640px;
+    margin: 8px 10px;
+}
+
+.markets-box.navigation {
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-size: 18px;
+    color: #99ccff;
+    line-height: 46px;
+    margin-bottom: 8px;
+}
+
+.markets-text.navigation.selected {
+    color: #FFF;
+}
+
+.markets-box.fixtures {
     float: left;
 }
 
-.markets-container table {
+.markets-table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
     text-align: center;
+    border-radius: 20px;
 }
 
-.markets-container * {
-    text-shadow: 1px 1px 1px #343434;
+.markets-tr {
+    height: 42px;
 }
 
-.markets-box-navigation {
-    border-radius: 5px;
-    border: 1px solid #fff;
+.markets-tr.fixtures.header {
+    background-color: #1e293e;
+}
+
+.markets-th.date {
+    width: 60px;
+    background-color: #1e293e;
+    border-radius: 5px 0 0;
+}
+
+.markets-th.game {
+    width: 200px;
+    background-color: #1e293e;
+}
+
+.markets-th.favorite {
+    width: 30px;
+    background-color: #1e293e;
+}
+
+.markets-th.statistics {
+    width: 30px;
+    background-color: #1e293e;
+}
+
+.markets-th.separator {
+    width: 5px;
     background: none;
-    margin-top: 10px;
-    line-height: 20px;
-    padding: 1px 15px 1px 5px;
+}
+
+.markets-th.selection.first {
+    font-size: 18px;
+    color: #99ccff;
+    background-color: #2d415c;
+    width: 87px;
+    border-left: 1px solid #2d415c;
+}
+
+.markets-th.selection {
+    font-size: 18px;
+    color: #99ccff;
+    background-color: #2d415c;
+    width: 86px;
+}
+
+.markets-th.marketCount {
+    background-color: #1e293e;
+    width: 50px;
+    border-radius: 0 5px 0 0;
+}
+
+.markets-td.date {
+    font-size: 12px;
+    color: #99ccff;
+}
+
+.markets-td.game {
+    text-align: left;
+    font-size: 14px;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.markets-td.favorite {
+    color: #99ccff;
+}
+
+.markets-td.statistics {
+    color: #99ccff;
+}
+
+.markets-td.separator {
+    background: none;
+}
+
+.markets-td.selection {
+    background-color: #2d415c;
+}
+
+.markets-td.marketsCount {
+    background-color: #2d415c;
+}
+
+.markets-td.date.even, .markets-td.game.even, .markets-td.favorite.even,
+.markets-td.statistics.even {
+    background-color: #2d415c;
+}
+
+.markets-td.date.odd, .markets-td.game.odd, .markets-td.favorite.odd,
+.markets-td.statistics.odd {
+    background-color: #435772;
+}
+
+.markets-td.selection.even {
+    background-color: #435772;
+}
+
+.markets-td.selection.odd {
+    background-color: #607d8b;
+}
+
+
+.markets-button {
+    border: 0;
+    background: none;
+}
+
+.markets-button.favorite {
+    font-size: 12px;
+}
+
+.markets-button.favorite.selected {
+    color: #ffcc00;
+}
+
+.markets-button.statistics {
+    font-size: 12px;
+}
+
+.markets-button.statistics.selected {
+    color: #ffcc00;
+}
+
+.markets-button.selection {
+    font-size: 14px;
+    color: #ffcc00;
+    width: 100%;
+    height: 42px;
+    border-left: 1px solid #2d415c;
+}
+
+.markets-button.selection.selected {
+    font-weight: bold;
+    border: 2px solid #ff3300;
 }
 
 .markets-header {
@@ -34,7 +178,6 @@
     border: 1px solid #001345;
     border-bottom: none;
     background: #133380;
-    margin-top: 25px;
 }
 
 .markets-text-title {
@@ -54,20 +197,8 @@
 }
 
 .markets-content {
-    border-radius: 0 0 10px 10px;
-    padding-bottom: 15px;
-    border: 1px solid #282526;
+    margin-top: 8px;
     background: #474445;
-}
-
-.markets-table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 10px 6px;
-}
-
-.markets-td-header {
-    text-align: left;
 }
 
 .markets-td-label {
@@ -78,17 +209,6 @@
     width: 20%;
 }
 
-.markets-button, .markets-box-label {
-    display: block;
-    background: #3a3738;
-    height: 25px;
-    /*line-height:25px;*/
-    color: #FF3;
-    border: 1px solid #222;
-    border-radius: 8px;
-    cursor: pointer;
-    width: 100%;
-}
 
 .markets-box-label {
     text-align: left;
