--- a/public/assets/portal/css/sports/sportsMenu.css
+++ b/public/assets/portal/css/sports/sportsMenu.css
@@ -61,7 +61,7 @@
 }
 
 .sportsMenu-text {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
     font-size: 16px;
     color: #FFF;
 }
